--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
    "name": "@ioa/model",
-   "version": "8.0.1",
+   "version": "9.0.0",
    "description": "Ormv.js库数据库模型封装",
    "dependencies": {
-      "ioa": "^8.0.1",
-      "ormv": "^0.3.1-alpha.1"
+      "ioa": "^9.0.1",
+      "ormv": "^0.6.0"
    },
    "files": [
       "lib",
