--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@ioa/model",
-   "version": "9.5.0",
+   "version": "9.7.0",
    "description": "Ormv.js库数据库模型封装",
    "dependencies": {
       "ormv": "^1.0.2"
@@ -10,6 +10,7 @@
       "!lib/node_modules"
    ],
    "devDependencies": {
+      "@ioa/config": "^9.5.0",
       "ioa": "^9.5.0"
    }
 }
