--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "@ioa/ormv",
-   "version": "9.8.10",
-   "description": "Ormv.js库数据库模型封装",
+   "version": "9.8.11",
+   "description": "ormv.js库数据库模型封装",
    "dependencies": {
       "ormv": "^3.0.4"
    },
@@ -10,6 +10,6 @@
    ],
    "devDependencies": {
       "@ioa/config": "^9.5.0",
-      "ioa": "^9.8.5"
+      "ioa": "^9.8.6"
    }
 }
